wrap and z index fix

--- a/src/style.css
+++ b/src/style.css
@@ -380,6 +380,7 @@ button {
 .EasterEgg {
   pointer-events: none;
   position: fixed;
+  z-index: 1;
   bottom: 0;
   left: 50vw;
   transform: translateX(-50%) translateY(10vh);
@@ -391,12 +392,12 @@ button {
 }
 
 @keyframes EasterEggAnimation {
-  20% {
+  10% {
     opacity: 1;
-    transform: translateX(-50%) translateY(-11vh);
+    transform: translateX(-50%) translateY(-10.5vh);
   }
-  30%,
-  80% {
+  15%,
+  90% {
     opacity: 1;
     transform: translateX(-50%) translateY(-10vh);
   }
